assets/css/styles.css
* {
    box-sizing: border-box;
}

body {
    background-color: #b8c6db;
    background-image: linear-gradient(315deg #b8c6db 0%, #f5f7fa 95%);
    font-family: "Poppins", sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    min-height: 100vh;
}

/* JavaScript Logo*/

.logo {
    align-items: center;
    position: absolute;
    padding-bottom: 560px;
}

.logo img {
    height: 120px;
    width: 120px;
}

/* Header and Timer*/

.header {
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0px;
    margin: 0;
}

.header .title {
    font-weight: 300;
    font-size: 20px;
}

.status-time {
    border: 1px solid gray;
    padding: 10px;
}

/* Questions Section */

.questions-container {
    background-color: white;
    border-radius: 10px;
    box-shadow: 0 0 10px 5px rgba(100, 100, 100, 0.2);
    overflow: hidden;
    width: 600px;
    max-width: 100%;
    margin-top: 50px;
}

.questions-box {
    padding: 40px;
}
h2 {
    text-align: center;
    padding: 10px;
    margin: 0;
}

/* list Section */

ul {
    list-style: none;
    padding: 0;
}

ul li {
    margin: 10px 0;
    font-size: 15px;
    border: 1PX solid gray;
    padding: 5px;
    border-radius: 5px;
}

ul li:hover {
    background-color: #c2c2c2;
}

ul li label {
    cursor: pointer;
}

button {
    background-color: rgb(25, 88, 160);
    border: none;
    color: white;
    display: block;
    font-family: inherit;
    font-size: 17px;
    width: 100%;
    padding: 20px;
    cursor: pointer;
}

button:hover {
    background-color: rgb(15, 25, 112);
}

